# wiscurds-playground

./: .gitignore  README.md
summer2026/: .gitignore  AGENTS.md  README.md  llm.py  prompts.py  pyproject.toml  simulation_utils.py
summer2026/experiments/: README.md  RESEARCH_LOG.md  RESULTS.md
summer2026/experiments/cross-scen/: _analyze.py
summer2026/experiments/oneshot/: README.md
summer2026/experiments/oneshot-est/: README.md
summer2026/experiments/prompt-quality/: README.md
summer2026/iterations/: README.md
summer2026/iterations/20260514_193919_scheduler_high_006_bench_canonical_train/: scheduler_out.py  system_iterate.template.md
summer2026/iterations/20260514_195138_scheduler_high_006_bench_canonical_train/: context.template.md  prompt_user.txt  response_raw.txt  scheduler_out.py
summer2026/prompts/: README.md  system_iterate.md  system_iterate_ablate_short.md
summer2026/results/: .gitignore
summer2026/scenarios/: scenarios.csv
summer2026/tool/: config.py  iterate.py  iterate_chain.py  iterate_worker.py  query.py  trace_summary.py
summer2026/traces/: bench_canonical_train.csv  bench_cpu_bound_train.csv  bench_deep_pipelines_test.csv  bench_low_load_test.csv  bench_shallow_pipelines_train.csv  trace_scale16x_600s_0.csv
summer2026/traces-v2/: batch-heavy_bursty_memory-bound_train.csv  batch-heavy_steady_cpu-bound_train.csv  batch-heavy_steady_memory-bound_train.csv  canonical_bursty_balanced_test.csv  canonical_bursty_balanced_train.csv  canonical_steady_balanced_test.csv  generator.py  priority-heavy_bursty_memory-bound_train.csv
(+1279 files in other folders)
