[project]
name = "summer2026"
version = "0.1.0"
description = "Self-contained LLM scheduler experiments for Eudoxia."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "eudoxia",
    "litellm>=1.77.5",
    "matplotlib>=3.8",
    "numpy>=1.24",
    "python-dotenv>=1.1.1",
    "setuptools",
]

[tool.uv]
package = false
no-build-isolation-package = ["eudoxia"]

[tool.uv.sources]
eudoxia = { git = "https://github.com/BauplanLabs/eudoxia", rev = "c62122cd15eca36d8872f7f9204d2f9c30774b28" }
